Log through logback, keep the CSV export off the filesystem
Ten calls wrote to stdout or stderr directly - printStackTrace,
System.out.println, System.err.format. They bypass logback entirely, so
they carry no timestamp, no level and no MDC, and cannot be filtered or
shipped. They are logger calls now, at the level that matches what
happened, and the three in OperationsDetailedApi disappear with the change
below.

URLDecoder.decode(s, "UTF-8") becomes decode(s, StandardCharsets.UTF_8).
The String overload declares a checked UnsupportedEncodingException that
cannot happen, and catching it was the only reason those three
try/catch/printStackTrace blocks existed. The Charset overload has been
there since Java 10.

The batch details CSV was created in the process working directory and
left there after the upload, so every export grew the container filesystem
until the pod restarted. It goes to a real temporary file now and is
deleted in a finally block. It is also written as UTF-8 rather than with
the platform default encoding, which until now decided how party names
came out in a file an operator downloads.

TestSomething is deleted, and junit:junit:4.11 with it. It was an empty
method with JUnit 4's @Test, and with useJUnitPlatform() and no vintage
engine on the classpath it never ran - the dependency only contributed an
old CVE.